Edited version of data frames lesson
Retained the basic structure, but there are a lot of edits (it's now
cbind before rbind) and some additional information (how to delete NAs
in a dataframe)

--- a/05-data-structures-part2.Rmd
+++ b/05-data-structures-part2.Rmd
@@ -8,21 +8,27 @@ minutes: 45
 ```{r, include=FALSE}
 source("tools/chunk-options.R")
 # Silently load in the data so the rest of the lesson works
-gapminder <- read.csv("data/gapminder-FiveYearData.csv", header=TRUE)
+library(gapminder)
+#gapminder <- read.csv("data/gapminder-FiveYearData.csv", header=TRUE)
 ```
 
 > ## Learning objectives {.objectives}
 >
 > * Become familiar with data frames
-> * To be able to read in regular data into R
+> * Be able to read in regular data into R
 >
 
 ### Data frames
 
-Data frames are similar to matrices, except each column can be a different atomic type.
-Underneath the hood, data frames are really lists, where each element is
-an atomic vector, with the added restriction that they're all the same length.
-As you will see, if we pull out one column of a data frame, we will have a vector.
+Data frames are similar to matrices, except each column can be a
+different atomic type. A data frames is the standard structure for
+storing and manipulating rectangular data sets.  Underneath the hood,
+data frames are really lists, where each element is an atomic vector,
+with the added restriction that they're all the same length.  As you
+will see, if we pull out one column of a data frame,we will have a
+vector. You will probably find that data frames are more complicated
+than vectors and other data structures we have considered, but they
+provide powerful capabilities.
 
 
 Data frames can be created manually with the `data.frame` function:
@@ -32,73 +38,112 @@ df <- data.frame(id = c('a', 'b', 'c', 'd', 'e', 'f'), x = 1:6, y = c(214:219))
 df
 ```
 
-> #### Challenge: Data frames {.challenge}
+> #### Challenge 1: Data frames {.challenge}
 >
 > Try using the `length` function to query
 > your data frame `df`. Does it give the result
 > you expect?
 >
 
-Each column in the data frame is simply a list element, which is why when you ask for the
-`length` of the data frame, it tells you the number of columns. If you actually want
-the number of rows, you can use the `nrow` function.
+Each column in the data frame is simply a list element, which is why
+when you ask for the `length` of the data frame, it tells you the
+number of columns. If you actually want the number of rows, you can
+use the `nrow` function.
 
-We can add rows or columns to a data.frame using `rbind` or `cbind` (these are
-the two-dimensional equivalents of the `c` function):
+We can add columns or rows to a data.frame using `cbind` or `rbind`
+(these are the two-dimensional equivalents of the `c` function):
+
+To add a column we can use `cbind`:
 
 ```{r}
-df <- rbind(df, list("g", 11, 42))
+df <- cbind(df, 6:1)
+df
 ```
 
-This doesn't work as expected! What does this error message tell us?
+Note that R automatically names the column. We can also provide a
+name:
 
-It sounds like it was trying to generate a factor level. Why? Perhaps our first
-column (containing characters) is to blame...
-We can access a column in a `data.frame` by using the `$` operator.
+```{r}
+df <- cbind(df, caps=LETTERS[1:6])
+df
+```
+
+(`LETTERS` and `letters` are built-in constants.)
+
+To add a row we use `rbind`:
+
+```{r}
+df <- rbind(df, list("g", 11, 42, 0, "G"))
+```
+
+This doesn't work as expected! What do the error messages tell us?
+
+It appears that R was trying to append "g" and "G" as factor
+levels. Why? Let's examine the first column.  We can access a column
+in a `data.frame` by using the `$` operator.
 
 
 ```{r}
 class(df$id)
+str(df)
 ```
 
-Indeed, R automatically made this first column a factor, not a character vector.
-We can change this in place by converting the type of this column.
+Indeed, R automatically made the first and last columns into factors,
+not character vectors.  We can change this in place by converting the
+type of this column.
 
 ```{r}
 df$id <- as.character(df$id)
+df$caps <- as.character(df$caps)
 class(df$id)
 ```
 
 Okay, now let's try adding that row again.
 
 ```{r}
-df <- rbind(df, list("g", 11, 42))
+df <- rbind(df, list("g", 11, 42, 0, 'G'))
 tail(df, n=3)
 ```
 
-Note that to add a row, we need to use a list, because each column is a different type!
-If you want to add multiple rows to a data.frame, you will need to separate the new columns
-in the list:
+We probably want to delete the row where including NAs. There are
+multiple ways to do this:
 
 ```{r}
-df <- rbind(df, list(c("l", "m"), c(12, 13), c(534, -20)))
-tail(df, n=3)
+df[-7, ]  # The minus sign tells R to delete the row
+df[complete.cases(df), ]  # A function for this purpose
+na.omit(df)  # Another function for this purpose
+df <- na.omit(df)
 ```
-
-You can also row-bind data.frames together:
+You can also row-bind data.frames together, but notice what happens to
+the rownames:
 
 ```{r}
 rbind(df, df)
 ```
 
-To add a column we can use `cbind`:
+R is making sure that rownames are unique. You can fix this by setting
+rownames to NULL:
 
 ```{r}
-df <- cbind(df, 10:1)
-df
+df2 <- rbind(df, df)
+rownames(df2) <- NULL
+df2
 ```
 
-> #### Challenge 1 {.challenge}
+
+<!-- 
+When we add a row we need to use a list, because each column is
+a different type!  If you want to add multiple rows to a data.frame,
+you will need to separate the new columns in the list:
+
+```{r}
+df <- rbind(df, list(c("l", "m"), c(12, 13), c(534, -20), c(-1, -2),
+c('H', 'I')))
+tail(df, n=3)
+```
+-->
+
+> #### Challenge 2 {.challenge}
 >
 > Create a data frame that holds the following information for yourself:
 >
@@ -108,7 +153,8 @@ df
 >
 > Then use rbind to add the same information for the people sitting near you.
 >
-> Now use cbind to add a column of logicals answering the question,
+> Now use cbind to add a column of logicals that will, for each
+>person, hold the answer to the question,
 > "Is there anything in this workshop you're finding confusing?"
 >
 
@@ -171,7 +217,7 @@ head(gapminder)
 To make sure our analysis is reproducible, we should put the code
 into a script file so we can come back to it later.
 
-> #### Challenge 2 {.challenge}
+> #### Challenge 3 {.challenge}
 >
 > Go to file -> new file -> R script, and write an R script
 > to load in the gapminder dataset. Put it in the `scripts/`
@@ -210,12 +256,13 @@ Remember, data frames are lists 'under the hood'.
 class(gapminder)
 ```
 
-The gapminder data is stored in a "data.frame". This is the default data structure when you read
-in data, and (as we've heard) is useful for storing data with mixed types of columns.
+The gapminder data is stored in a "data.frame". This is the default
+data structure when you read in data, and (as we've heard) is useful
+for storing data with mixed types of columns.
 
 Let's look at some of the columns.
 
-> #### Challenge 3: Data types in a real dataset {.challenge}
+> #### Challenge 4: Data types in a real dataset {.challenge}
 >
 > Look at the first 6 rows of the gapminder data frame we loaded before:
 >
@@ -269,12 +316,14 @@ question you're asking, and makes it easier to specify the ordering of the categ
 However there are many in the R community who find it more sensible to
 leave this as the default behaviour.
 
-> #### Tip: Changing options {.callout}
->
-> When R starts, the first thing it does is runs any code in the file `.Rprofile`
-> in the project directory. Any permanent changes to default behaviour you want
-> to make should be stored in that file.
->
+> #### Tip: Changing options {.callout} 
+> When R starts, it runs any
+>code in the file `.Rprofile` in the project directory. You can make
+>permanent changes to default behaviour by storing the changes in that
+>file. BE CAREFUL, however. If you change R's default options,
+>programs written by others may not run correctly in your environment
+>and vice versa. For this reason, some argue that most such changes
+>should be in your scripts, where they are visible.
 
 The first thing you should do when reading data in, is check that it matches what
 you expect, even if the command ran without warnings or errors. The `str` function,
@@ -307,7 +356,7 @@ this case are simply the row numbers.
 We can also modify this information:
 
 ```{r}
-copy <- gapminder # lets create a copy so we don't mess up the original
+copy <- gapminder # create a copy so we don't mess up the original
 colnames(copy) <- c("a", "b", "c", "d", "e", "f")
 head(copy)
 ```
@@ -333,12 +382,16 @@ Lets run a basic linear regression on the gapminder dataset:
 l1 <- lm(lifeExp ~ year, data=gapminder)
 ```
 
-We won't go into too much detail of what I just wrote, but briefly;
-the `~` denotes a formula, which means treat the variable on the left of the
-`~` as the left hand side of the equation (or response in this case), and
-everything on the right as the right hand side. By telling the linear
-model function to use the gapminder data frame, it knows to look for those
-variable names as its columns.
+We won't go into too much detail, but briefly: 
+
+* `lm` estimates linear statistical models
+* The first argument is a formula, with  `a ~ b` meaning that `a`,
+     the dependent (or response) variable, is a
+    function of `b`, the independent variable. 
+* We tell `lm` to use the gapminder data frame, so it knows where to
+ find the variables `lifeExp` and `year`. 
+
+
 
 Let's look at the output:
 
@@ -352,9 +405,9 @@ Not much there right? But if we look at the structure...
 str(l1)
 ```
 
-There's a lot of stuff, stored in nested lists! This is why the structure
-function is really useful, it allows you to see all the data available to
-you returned by a function.
+There's a great deal stored in nested lists! The structure function
+allows you to see all the data available, in this case, the data that
+was returned by the `lm` function.
 
 For now, we can look at the `summary`:
 
@@ -365,9 +418,15 @@ summary(l1)
 As you might expect, life expectancy has slowly been increasing over
 time, so we see a significant positive association!
 
+> #### Challenge 5 {.challenge}
+>
+> Write this function: `lm(lifeExp ~ year, data=gapminder)` without
+> using the `data` argument. Verify that you get the same answer.
+
+
 ## Challenge Solutions
 
-> #### Solution to challenge 1 {.challenge}
+> #### Solution to Challenge 2 {.challenge}
 >
 > Create a data frame that holds the following information for yourself:
 >
@@ -386,4 +445,7 @@ time, so we see a significant positive association!
 > my_df <- rbind(my_df, list(c("Jo", "John"), c("White", "Lee"), c(23, 41)))
 > my_df <- cbind(my_df, confused = c(FALSE, FALSE, TRUE, FALSE))
 > ```
->
+
+> #### Solution to Challenge 5 {.challenge}
+> 
+> `lm(gapminder$lifeExp ~ gapminder$year)`
