--- a/09-vectorisation.Rmd
+++ b/09-vectorisation.Rmd
@@ -18,10 +18,10 @@ library(ggplot2)
 > * To understand vectorised operations in R.
 >
 
-One of the nice features of R is that most of its functions are vectorised,
-that is the function will operate on all elements of a vector without
-needing to loop through and act on each element one at a time. This makes
-writing code more concise, easy to read, and less error prone.
+Most of R's functions are vectorised, meaning that the function will
+operate on all elements of a vector without needing to loop through
+and act on each element one at a time. This makes writing code more
+concise, easy to read, and less error prone.
 
 
 ```{r}
@@ -61,7 +61,7 @@ y:  6  7  8  9
 
 > #### Challenge 2 {.challenge}
 >
-> Refresh your ggplot skills by plotting population in millions against year.
+> Pick one country and plot population in millions against year.
 >
 
 Comparison operators also apply element-wise, as we saw in the
@@ -74,7 +74,7 @@ x > 2
 Logical operations are also vectorised:
 
 ```{r}
-a <- x > 3
+a <- x > 3  
 a
 ```
 
@@ -84,7 +84,7 @@ a
 > `all()` will return `TRUE` if *all* elements of a vector are `TRUE`
 >
 
-Many functions also operate on element-wise on vectors:
+Most functions also operate on element-wise on vectors:
 
 ```{r}
 x <- 1:4
@@ -97,6 +97,7 @@ Vectorised operations also work element wise on matrices:
 m <- matrix(1:12, nrow=3, ncol=4)
 m * -1
 ```
+A matrix in R 
 
 > #### Tip: element-wise vs. matrix multiplication {.callout}
 >
@@ -120,6 +121,7 @@ m * -1
 > 1. `m ^ -1`
 > 2. `m * c(1, 0, -1)`
 > 3. `m > c(0, 20)`
+> 4. `m * c(1, 0, -1, 2)`
 >
 > Did you get the output expected? If not, ask a helper!
 >
