--- a/09-vectorisation.Rmd
+++ b/09-vectorisation.Rmd
@@ -148,7 +148,7 @@ m * -1
 >  x = 1/(1^2) + 1/(2^2) + 1/(3^2) + ... + 1/(n^2)
 > ```
 >
-> This would be tedious to type out, and impossible for
+> This would be tedious to type out for small n, and impossible for
 > high values of n.
 >  Use vectorisation to compute x when n=100. What is the sum  
 > when n=10,000?
@@ -215,7 +215,7 @@ m * -1
 > ```
 >
 
-> ####  Challenge 4 {.challenge}
+> ####  Solution to Challenge 4 {.challenge}
 >
 > We're interested in looking at the sum of the
 > following sequence of fractions:
@@ -226,8 +226,7 @@ m * -1
 >
 > This would be tedious to type out, and impossible for
 > high values of n.
-> Can you use vectorisation to solve for x, when n=100?
-> How about when n=10,000?
+>  Use vectorisation to compute x, when n=100 and when  n=10,000?
 >
 > ```{r}
 > sum(1/(1:100)^2)
