--- a/gapminder.Rmd
+++ b/gapminder.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Untitled"
-author: "Robert McDonald"
+title: "GDP Per Capita and Life Expectancy by Country: A Gapminder Exercise"
+author: "Team SWC-NW"
 date: "August 14, 2015"
 output: html_document
 ---
@@ -9,7 +9,7 @@ This is undoubtedly overkill but it certainly illustrates the power of R and mar
 
 ```{r setup, echo=FALSE}
 library(knitr)
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 library(gapminder)
 ```
 
@@ -23,11 +23,11 @@ for (i in sort(unique(gapminder$country))) {
     cat('The growth rate in GDP per capita between 2002 and 2007 for ',
           i,' was  ')
     cat(format(log(y$gdpPercap[y$year==2007]/
-            y$gdpPercap[y$year==2002])/5*100, digits=3),'%')
+            y$gdpPercap[y$year==2002])/5*100, digits=3),'%', sep='')
     plot(y$year, y$gdpPercap/1e03, ylim=c(0, 100),
          main='GDP per Capita and Life Expectancy',
          xlab='Year', ylab='GDPPC ($k) and Life expectancy (years)')
     points(y$year, y$lifeExp, pch=2)
     legend('topleft', legend=c('gdpPC', 'LE'), pch=c(1, 2))
 }
-```
+
