added bullet item in intro about packages

--- a/01-rstudio-intro.Rmd
+++ b/01-rstudio-intro.Rmd
@@ -17,7 +17,8 @@ source("tools/chunk-options.R")
 > * To be able to manage your workspace in an interactive R session
 > * To be able to use mathematical and comparison operations
 > * To be able to call functions
->
+> * Introduction to package management
+> 
 
 ### Introduction to RStudio
 
